# grokking-via-lid

./: .gitignore  .rsync-exclude  LICENSE  README.md  pyproject.toml  requirements.txt
config/: train_grokk.yaml
config/dataset/: mod_division_dataset.yaml  mod_multiply_dataset.yaml  mod_subtract_dataset.yaml  mod_sum_dataset.yaml  permutation_group_dataset.yaml
config/logging/: default.yaml
config/model/: grokk_model.yaml
grokking/: __init__.py
grokking/analysis/local_estimates_computation/: get_n_neighbors_from_array_len_and_pointwise_config.py  global_and_pointwise_local_estimates_computation.py
grokking/analysis/local_estimates_computation/estimator/: get_estimator.py
grokking/config_classes/: __init__.py  constants.py  sanitize_dirname.py  setup_omega_conf.py
grokking/config_classes/local_estimates/: filtering_config.py  local_estimates_config.py  noise_config.py  plot_config.py  pointwise_config.py
grokking/documentation/: anonymization_map.json  anonymize_repo.py
grokking/experiments/: run_with_multiple_dataset.frac_train.sh
grokking/experiments/sync_data/: rsync_selected_directories_from_hpc_cluster.sh  sync_wandb_runs.sh
grokking/grokk_replica/: datasets.py  grokk_model.py  load_objs.py  transformer.py
grokking/logging/: __init__.py  create_and_configure_global_logger.py  get_git_info.py  log_array_info.py  log_dataframe_info.py  log_model_info.py  setup_exception_logging.py  setup_transformers_logger.py
grokking/model_handling/: count_trainable_parameters.py  get_torch_device.py  set_seed.py
grokking/plotting/embedding_visualization/: create_projected_data.py  create_projection_plot.py
grokking/scripts/: collect_hidden_states.py  dataset_for_topological_analysis.py  do_topological_analysis_step.py  generate_tsne_visualizations.py  group_dataset.py  input_and_hidden_states_array.py  lr_scheduler_config.py  setup_environment.sh  sync_wandb_runs.sh  train_grokk.py  training_loop_state.py
grokking/scripts/hhu_hilbert/sync_data/: rsync_selected_directories_from_hhu_hilbert.sh
grokking/scripts/hhu_hilbert/sync_data/sync_wandb/: find_and_rsync_wandb_dirs_from_hhu_hilbert.sh  rsync_full_wandb_output_dir_from_hhu_hilbert.sh  rsync_selected_wandb_output_dirs_from_hhu_hilbert.sh
grokking/setup/: setup_environment.sh
grokking/typing/: constants.py  enums.py
